# data-pipeline-mongo

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  flying_walrus_game_score_setter .sh  pyproject.toml
configs/: logging_config.json  pipeline_config.json
docker/: Dockerfile  entrypoint.sh
src/: __init__.py  cli.py  settings.py
src/application/services/: deduplication_service.py  fetching_service.py  normalization_service.py
src/commands/: database.py  pipeline.py
src/core/: entities.py
src/core/ports/: api_client.py  merger.py  normalizer.py  repositories.py
src/infrastructure/: dependencies.py  pipeline.py  utils.py
src/infrastructure/api/: app.py  dependencies.py  utils.py
src/infrastructure/api/pipeline/: endpoints.py
src/infrastructure/api/plots/: endpoints.py
src/infrastructure/db/mongo/: client.py  migrations.py  repositories.py
src/infrastructure/ports/api_clients/: crowdstrike_api_client.py  qualys_api_client.py
src/infrastructure/ports/mergers/: priority_merger.py
src/infrastructure/ports/normalizers/: crowdstrike_normalizer.py  qualys_normalizer.py
