[project]
name = "data-pipeline-mongo"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.10.*"
dependencies = [
    "aiohttp>=3.12.14",
    "click>=8.2.1",
    "fastapi>=0.116.1",
    "matplotlib>=3.10.3",
    "motor>=3.7.1",
    "pydantic>=2.11.7",
    "pymongo>=4.13.2",
    "python-multipart>=0.0.20",
    "seaborn>=0.13.2",
    "tenacity>=9.1.2",
    "uvicorn>=0.35.0",
]
